fixed input background on mobiles

--- a/style.css
+++ b/style.css
@@ -392,3 +392,7 @@ section h1 {
     color: white;
 }
 
+input {
+    background-color: white;
+}
+
